fix card height in card-container. add extra margin-bottom

--- a/source/assets/stylesheets/components/_post-container.scss
+++ b/source/assets/stylesheets/components/_post-container.scss
@@ -1,24 +1,33 @@
 .post-list {
-  margin-bottom: 24px;
+  margin-bottom: 64px;
   display: flex;
   flex-wrap: wrap;
   list-style: none;
   justify-content: center;
 
   & li {
-    height: min-content;
+    height: auto;
     width: 50%;
     padding: 0px 8px 16px;
     display: list-item;
   }
 
   & li:nth-child(n+3):nth-child(-n+8) {
-    height: min-content;
+    height: auto;
     width: 33%;
     display: list-item;
 
     & .post-content-description {
       display: none;
     }
+  }
+  & li:nth-child(n+9):nth-child(-n+11) {
+    height: auto;
+    width: 33%;
+    display: list-item;
+
+    // & .post-content-description {
+    //   display: none;
+    // }
   }
 }
